[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/mechanics/Player.gd" type="Script" id=1]
[ext_resource path="res://sprites/Flame.png" type="Texture" id=2]
[ext_resource path="res://sfx/Retro Jump Classic 08.wav" type="AudioStream" id=3]
[ext_resource path="res://sfx/Gallop.wav" type="AudioStream" id=4]

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 2 )
region = Rect2( 24, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 12, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 2 )
region = Rect2( 24, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 12, 12 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 24 ) ],
"loop": true,
"name": "falling",
"speed": 5.0
}, {
"frames": [ SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 23 ), SubResource( 22 ) ],
"loop": true,
"name": "run",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=25]
extents = Vector2( 3.5, 4.5 )

[sub_resource type="RectangleShape2D" id=26]
extents = Vector2( 3.5, 1.5 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )
speed = 60
acceleration = 113
jumpForce = 110

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -1 )
frames = SubResource( 17 )
animation = "idle"
frame = 1
speed_scale = 0.5
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 0.5 )
shape = SubResource( 25 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.5, 5.5 )
shape = SubResource( 26 )

[node name="JumpSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -20.0
pitch_scale = 0.6

[node name="RunSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -45.0

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
